--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="settings">Settings</string>
     <string name="enter_current_tariff">Enter current rate</string>
     <string name="cancel">Cancel</string>
+    <string name="the_current_readings_should_not_be_less_than_the_previous_ones">The current readings should not be less than the previous ones!</string>
 </resources>
