--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="electric">Electric</string>
     <string name="water">Water</string>
     <string name="gas">Gas</string>
+    <string name="select_month">Select month:</string>
 </resources>
