--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="gasmeter">Gas Meter</string>
     <string name="watermeter">Water Meter</string>
     <string name="settings">Settings</string>
-    <string name="enter_current_tariff">Enter current rate</string>
+    <string name="enter_current_rate">Enter current rate</string>
     <string name="cancel">Cancel</string>
     <string name="the_current_readings_should_not_be_less_than_the_previous_ones">The current readings should not be less than the previous ones!</string>
     <string name="electricity_supply">Electricity supply</string>
@@ -49,4 +49,7 @@
     <string name="october">October</string>
     <string name="november">November</string>
     <string name="december">December</string>
+    <string name="current_counter">Current counter</string>
+    <string name="enter_previous_counter_value">Enter previous counter value</string>
+    <string name="previous_meters_values">Previous counters values</string>
 </resources>
